--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -17,14 +17,14 @@ ifdef::env-site,env-yard[]
 :uri-rel-tree-base: {uri-repo}/tree/v12docs
 endif::[]
 :uri-docs: {uri-rel-file-base}/docs
-:uri-instructions: {uri-docs/instructions.adoc}
+:uri-instructions: {uri-docs}/instructions.adoc
 :uri-oci-keys: https://docs.cloud.oracle.com/iaas/Content/API/Concepts/apisigningkey.htm
 :uri-oci-ocids: https://docs.cloud.oracle.com/iaas/Content/API/Concepts/apisigningkey.htm#five
 :uri-oci-okepolicy: https://docs.cloud.oracle.com/iaas/Content/ContEng/Concepts/contengpolicyconfig.htm#PolicyPrerequisitesService
 :uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
 :uri-terraform: https://www.terraform.io
 :uri-terraform-oci: https://www.terraform.io/docs/providers/oci/index.html
-:uri-terraform-options: {uri-docs/terraformoptions.adoc}
+:uri-terraform-options: {uri-docs}/terraformoptions.adoc
 
 == Quickstart Assumptions
 
