--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -12,16 +12,14 @@ ifdef::env-github[]
 :tip-caption: :bulb:
 :warning-caption: :warning:
 endif::[]
-ifdef::env-site,env-yard[]
-:uri-rel-file-base: {uri-repo}/blob/v12docs
-:uri-rel-tree-base: {uri-repo}/tree/v12docs
-endif::[]
+:uri-repo: https://github.com/hyder/terraform-oci-oke
+:uri-rel-file-base: link:{uri-repo}/blob/v12docs
+:uri-rel-tree-base: link:{uri-repo}/tree/v12docs
 :uri-docs: {uri-rel-file-base}/docs
 :uri-instructions: {uri-docs}/instructions.adoc
 :uri-oci-keys: https://docs.cloud.oracle.com/iaas/Content/API/Concepts/apisigningkey.htm
 :uri-oci-ocids: https://docs.cloud.oracle.com/iaas/Content/API/Concepts/apisigningkey.htm#five
 :uri-oci-okepolicy: https://docs.cloud.oracle.com/iaas/Content/ContEng/Concepts/contengpolicyconfig.htm#PolicyPrerequisitesService
-:uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
 :uri-terraform: https://www.terraform.io
 :uri-terraform-oci: https://www.terraform.io/docs/providers/oci/index.html
 :uri-terraform-options: {uri-docs}/terraformoptions.adoc
