added contributing and renamed architecture to topology
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/README.adoc
+++ b/README.adoc
@@ -51,7 +51,7 @@ This {uri-repo}[Terraform OKE Installer] for {uri-oci}[Oracle Cloud Infrastructu
 
 {uri-instructions}[Instructions]
 
-{uri-topology}[topology]
+{uri-topology}[Topology]
 
 {uri-terraform-options}[Terraform Options]
 
