--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -30,6 +30,8 @@ endif::[]
 :uri-networks-subnets-cidr: https://erikberg.com/notes/networks.html
 :uri-oci: https://cloud.oracle.com/cloud-infrastructure
 :uri-oci-documentation: https://docs.cloud.oracle.com/iaas/Content/home.htm
+:uri-oci-instance-principal: https://docs.cloud.oracle.com/iaas/Content/Identity/Tasks/callingservicesfrominstances.htm
+:uri-oci-region: https://docs.cloud.oracle.com/iaas/Content/General/Concepts/regions.htm
 :uri-oke: https://docs.cloud.oracle.com/iaas/Content/ContEng/Concepts/contengoverview.htm
 :uri-oracle: https://www.oracle.com
 :uri-prereqs: {uri-docs}/prerequisites.adoc
@@ -47,15 +49,71 @@ This section assumes you have completed all the {uri-prereqs}[pre-requisites].
 
 === Configure the variable file
 
+A sample variable file (terraform.tfvars.example) with all the configuration options is available. Create a terraform variable file by copying the terraform.tfvars.example:
+
+----
+cp terraform.tfvars.example terraform.tfvars
+----
+
 === Configure identity parameters
+
+Enter the values for the following parameters in the terraform.tfvars file:
+
+- api_fingerprint
+- api_private_key_path
+- compartment_name
+- compartment_ocid
+- tenancy_ocid
+- user_ocid
+
+e.g.
+
+----
+api_fingerprint = "1a:bc:23:45:6d:78:e9:f0:gh:ij:kl:m1:23:no:4p:5q"
+----
+
+You would have obtained your values when doing the {uri-prereqs}[pre-requisites].
 
 === Configure ssh keys
 
+If you intend to use the bastion host, you must supply the ssh keys:
+
+----
+ssh_private_key_path = "~/.ssh/id_rsa"
+
+ssh_public_key_path = "~/.ssh/id_rsa.pub"
+----
+
 === Configure OCI parameters
+
+The 2 OCI parameters here mainly concern:
+
+1. the label_prefix: this will append a string to the name of every resource created
+2. the region: this allows you to select the region where you want the OKE cluster deployed
+
+e.g.
+
+----
+label_prefix="dev"
+region="us-phoenix-1"
+----
+
+The list of regions can be found {uri-oci-region}[here].
 
 === Configure networking parameters
 
+The networking parameters concern the VCN and the subnets network configuration as well as whether to enable some specific features such as the NAT or the Service Gateways. 
+
+You can leave most of the default options. However, you may want to change the following 2 parameters:
+
+. vcn_dns_name: this is the internal dns domain for resources created
+. vcn_name: this is the name of the vcn that will be appended to the label prefix
+
 === Configure bastion host parameters
+
+The bastion host parameters concern whether you want to enable the bastion. 1 parameter to keep in mind here is the enable_instance_principal. Be aware that if this is enabled, it gives API access to the bastion host without authentication.
+
+Read more about {uri-oci-instance-principal}[instance_principal].
 
 === Configure OKE parameters
 
